--- a/friends/templates/user_data.html
+++ b/friends/templates/user_data.html
@@ -24,13 +24,14 @@
                 <a class="dropdown-item" href=" {% url 'friendlist' %} ">Friends</a>
                 <a class="dropdown-item" href="#">Photos</a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Sign Out</a>
+                <a class="dropdown-item" href="{% url 'home' %}">Sign Out</a>
               </div>
             </li>
           </ul>
           <div class="justify-right">
-            <form class="form-inline my-2 my-lg-0 ">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+            <form class="form-inline my-2 my-lg-0 " method="POST" action="{% url 'searchlist' %}">
+              {% csrf_token %}
+                <input class="form-control mr-sm-2" type="search" name="searchbar" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
             </form>
         </div>
