--- a/friends/templates/home.html
+++ b/friends/templates/home.html
@@ -26,10 +26,11 @@
 <div class="container" >
     <form method="POST" action="{% url 'login' %}">
         {% csrf_token %}
+        <!-- {{ form }} -->
         <div class="container" >
             <div class="form-group">
-            <label for="email_id">Email Id</label>
-            <input type="email" class="form-control" name="email_id" aria-describedby="emailHelp" placeholder="Enter email">
+            <label for="username">User Name</label>
+            <input type="username" class="form-control" name="username" placeholder="Enter username">
             
             </div>
             <div class="form-group">
