--- a/friends/templates/register.html
+++ b/friends/templates/register.html
@@ -21,6 +21,12 @@
             </div>
           </div>
           <div class="col-md-4 mb-3">
+            <label for="username">Username</label>
+            <div class="input-group">
+              <input type="text" class="form-control" name="username" placeholder="username" required>
+            </div>
+          </div>
+          <div class="col-md-4 mb-3">
                 <label for="pswd">Password</label>
                 <div class="input-group">
                   <input type="password" class="form-control" name="pswd" placeholder="Password" required>
