--- a/friends/templates/requests_list.html
+++ b/friends/templates/requests_list.html
@@ -1,6 +1,6 @@
 {% extends 'user_data.html' %}
 
-{% block friendlist %}
+{% block listview %}
 
 <div class="container">
     {% for friend in friends %}
