--- a/friends/templates/user_data.html
+++ b/friends/templates/user_data.html
@@ -14,7 +14,7 @@
           <ul class="navbar-nav mr-auto">
             
             <li class="nav-item">
-              <a class="nav-link" href="#">Messages</a>
+              <a class="nav-link" href="{% url 'friendlist' %}">Messages</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="{% url 'showrequests' %} ">Show Requests</a>
@@ -44,7 +44,7 @@
 </nav>
 
 <div>
-
+    {% block style %} {% endblock %}
     {% block listview %}
     {% endblock %}
 
